tests/negative/test_let_bad_type_escaped.orb
fnc main () () {
    sym (x:i32 0);
    sym (y:i32 \x);
};